Remi_Hasan/src/test/resources/qls/InvalidStylesheets/SimpleFormMultiplePlacedFields.qls
stylesheet simpleForm
{
  page Page1
  {
    section "All Questions"
    {
      question someInteger
      question someBoolean
      question someDecimal
      question someDate
      question someMoney
      question someString
    }
  }
  page Duplicates
  {
    section "Second time someDecimal and someDate"
    {
      question someDecimal
      question someDate
    }
  }
}